--- a/index.html
+++ b/index.html
@@ -20,10 +20,10 @@
     <div class="collapse navbar-collapse" id="navbarNav">
       <ul class="navbar-nav ml-auto">
         <li class="nav-item">
-          <a class="nav-link" href="#about">ABOUT</a>
+            <a class="nav-link" href="#works">WORKS</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="#works">WORKS</a>
+            <a class="nav-link" href="#about">ABOUT</a>
         </li>
         <li class="nav-item">
           <a class="nav-link" href="#contact">CONTACT</a>
@@ -51,7 +51,7 @@
     <div class="separator"></div>
   </div>
 
-  <div class="container mt-5">
+  <div class="container mt-5" id="works">
     <div class="row">
       <div class="col-md-4 mb-4">
         <a href="https://sites.google.com/view/leadershipcompetenciesai" target="_blank" class="project-link">
@@ -172,23 +172,61 @@
 
   <div class="separator"></div>
 
-  <!-- About Me Section -->
-  <div class="container mt-5" id="about">
+<!-- About Me Section -->
+<div class="container mt-5" id="about">
     <div class="text-center mb-5">
-      <h2 class="display-4">About Me</h2>
-      <p class="lead">I am Marc Allen Camila, a passionate UI/UX and Graphics Designer with a keen eye for detail and a deep understanding of user experience principles.</p>
+        <h2 class="display-4">About Me</h2>
+        <p class="lead">I am Marc Allen Camila, a passionate UI/UX and Graphics Designer with a keen eye for detail and a deep understanding of user experience principles.</p>
     </div>
     <div class="row">
-      <div class="col-md-6">
-        <img src="/images/pic2.png" alt="About Me" class="img-fluid rounded mb-3">
-      </div>
-      <div class="col-md-6">
-        <p>I have honed my skills in visual design, front-end development, and interaction design. I believe in creating designs that not only look good but also provide an intuitive and engaging user experience.</p>
-        <p>My journey started with a deep interest in technology and art, leading me to pursue a career in UI/UX design. Over the years, I have worked on various projects, each one teaching me something new and helping me grow as a designer.</p>
-        <p>I am always eager to take on new challenges and collaborate with others to create impactful designs that solve real-world problems.</p>
-      </div>
+        <div class="col-md-6">
+            <img src="/images/pic2.png" alt="About Me" class="img-fluid rounded mb-3">
+        </div>
+        <div class="col-md-6">
+            <p>I have honed my skills in visual design, front-end development, and interaction design. I believe in creating designs that not only look good but also provide an intuitive and engaging user experience.</p>
+            <p>My journey started with a deep interest in technology and art, leading me to pursue a career in UI/UX design. I have worked on various projects, each one teaching me something new and helping me grow as a designer.</p>
+            <p>I am always eager to take on new challenges and collaborate with others to create impactful designs that solve real-world problems.</p>
+            
+            <!-- Applications and Tools Section -->
+            <div class="mt-4">
+                <h3>Applications and Tools I Use</h3>
+                <div class="row">
+                    <!-- Coding Tools Container -->
+                    <div class="col-md-6">
+                        <div class="tools-container">
+                            <h4>For Coding:</h4>
+                            <ul class="list-unstyled">
+                                <li><i class="fab fa-react"></i> ReactJS</li>
+                                <li><i class="fab fa-js"></i> JavaScript</li>
+                                <li><i class="fas fa-database"></i> MongoDB</li>
+                                <li><i class="fab fa-html5"></i> HTML</li>
+                                <li><i class="fab fa-css3"></i> CSS</li>
+                                <li><i class="fab fa-node-js"></i> Node.js</li>
+                                <li><i class="fab fa-git"></i> Git</li>
+                            </ul>
+                        </div>
+                    </div>
+                    <!-- Graphics Design Tools Container -->
+                    <div class="col-md-6">
+                        <div class="tools-container">
+                            <h4>For Graphics Design:</h4>
+                            <ul class="list-unstyled">
+                                <li><i class="fab fa-adobe"></i> Adobe Creative Suite</li>
+                                <li><i class="fas fa-pencil-ruler"></i> TouchDesigner</li>
+                                <li><i class="fab fa-figma"></i> Figma</li>
+                                <li><i class="fab fa-sketch"></i> Sketch</li>
+                                <li><i class="fab fa-invision"></i> InVision</li>
+                                <li><i class="fab fa-adobe"></i> Adobe XD</li>
+                            </ul>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
     </div>
-  </div>
+</div>
+
+
 
   <div class="separator"></div>
 
@@ -225,6 +263,40 @@
       </div>
     </div>
   </div>
+
+  <!-- Footer Section -->
+<footer class="footer mt-5 py-4">
+    <div class="container text-center">
+        <div class="row">
+            <div class="col-md-4 mb-3">
+                <h4>Connect with Me</h4>
+                <div class="social-icons">
+                    <a href="https://www.linkedin.com/in/marc-allan-camila/" target="_blank" class="social-icon"><i class="fab fa-linkedin-in"></i></a>
+                    <a href="https://github.com/marc-camila" target="_blank" class="social-icon"><i class="fab fa-github"></i></a>
+                    <a href="https://www.instagram.com/markcamila0/" target="_blank" class="social-icon"><i class="fab fa-instagram"></i></a>
+                    <a href="mailto:marccamila.dev@gmail.com" class="social-icon"><i class="fas fa-envelope"></i></a>
+                </div>
+            </div>
+            <div class="col-md-4 mb-3">
+                <h4>Contact Info</h4>
+                <p><i class="fas fa-phone"></i> +63 915 726 8837</p>
+                <p><i class="fas fa-map-marker-alt"></i> Dasmariñas, Cavite, Philippines</p>
+            </div>
+            <div class="col-md-4 mb-3">
+                <h4>Quick Links</h4>
+                <ul class="list-unstyled">
+                    <li><a href="#about" class="footer-link">About</a></li>
+                    <li><a href="#works" class="footer-link">Works</a></li>
+                    <li><a href="#contact" class="footer-link">Contact</a></li>
+                </ul>
+            </div>
+        </div>
+        <div class="mt-3">
+            <p>&copy; 2024 Marc Allen Camila. All rights reserved.</p>
+        </div>
+    </div>
+</footer>
+
 
   
   <script src="https://cdn.jsdelivr.net/npm/@emailjs/browser@4/dist/email.min.js"></script>
