--- a/index.html
+++ b/index.html
@@ -271,8 +271,8 @@
             <div class="col-md-4 mb-3">
                 <h4>Connect with Me</h4>
                 <div class="social-icons">
-                    <a href="https://www.linkedin.com/in/marc-allan-camila/" target="_blank" class="social-icon"><i class="fab fa-linkedin-in"></i></a>
-                    <a href="https://github.com/marc-camila" target="_blank" class="social-icon"><i class="fab fa-github"></i></a>
+                    <a href="https://www.linkedin.com/in/mark-camila/" target="_blank" class="social-icon"><i class="fab fa-linkedin-in"></i></a>
+                    <a href="https://github.com/Camila-00" target="_blank" class="social-icon"><i class="fab fa-github"></i></a>
                     <a href="https://www.instagram.com/markcamila0/" target="_blank" class="social-icon"><i class="fab fa-instagram"></i></a>
                     <a href="mailto:marccamila.dev@gmail.com" class="social-icon"><i class="fas fa-envelope"></i></a>
                 </div>
@@ -284,12 +284,13 @@
             </div>
             <div class="col-md-4 mb-3">
                 <h4>Quick Links</h4>
-                <ul class="list-unstyled">
+                <ul class="list-unstyled animated-links">
                     <li><a href="#about" class="footer-link">About</a></li>
                     <li><a href="#works" class="footer-link">Works</a></li>
                     <li><a href="#contact" class="footer-link">Contact</a></li>
                 </ul>
             </div>
+            
         </div>
         <div class="mt-3">
             <p>&copy; 2024 Marc Allen Camila. All rights reserved.</p>
