--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Marc Camila - UI/UX Portfolio</title>
+  <link rel="icon" href="/images/marklogo.png" type="image/x-icon">
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
   <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400&display=swap" rel="stylesheet">
   <link href="https://fonts.googleapis.com/css2?family=Acumin+Variable+Concept:wght@300&family=Neue&display=swap" rel="stylesheet">
@@ -94,12 +95,12 @@
         </a>
       </div>
       <div class="col-md-4 mb-4">
-        <a href="https://example.com/project5" target="_blank" class="project-link">
+        <a href="https://www.figma.com/proto/3OaFhPEkOCqfdRyMX6yGXI/Sunglasses-Showcase?page-id=0%3A1&node-id=1-2&viewport=569%2C212%2C0.24&t=d1kN3c47HHAFqCGd-1&scaling=min-zoom&content-scaling=fixed" target="_blank" class="project-link">
           <div class="project">
-            <img src="/images/lfa.gif" alt="Project 5" class="img-fluid rounded mb-3">
-            <h3>Project 5 Title</h3>
+            <img src="/images/sunglasses.gif" alt="Project 5" class="img-fluid rounded mb-3">
+            <h3>SunSparkle Shades</h3>
             <hr>
-            <p>Placeholder</p>
+            <p>This product showcase is part of my portfolio, highlighting my ability to design and market fashionable, eco-friendly eyewear. It demonstrates my skills in creating engaging product descriptions and presenting a brand that appeals to a wide audience.</p>
           </div>
         </a>
       </div>
